# HomeAssignment

./: PROMPTS.md  README.md
temporal-calculator/: .dockerignore
temporal-calculator/calculator/: Dockerfile  activity_worker_main.py  ast_resolver.py  entrypoint.sh  load_generator.py  starter.py  task_queues.py  workflow_worker_main.py
temporal-calculator/calculator/activities/: __init__.py  math_activities.py
temporal-calculator/calculator/parser/: __init__.py  expression_parser.py
temporal-calculator/calculator/tests/: test_ast_resolver.py  test_entrypoint.py  test_entrypoints.py  test_expression_parser.py  test_helm_values_consistency.py  test_load_generator.py  test_math_activities.py  test_task_queues.py
temporal-calculator/calculator/workflows/: __init__.py  calculator_workflow.py
temporal-calculator/charts/calculator/: Chart.yaml  values.yaml
temporal-calculator/charts/calculator/templates/: _helpers.tpl  deployment.yaml  scaledobject.yaml
temporal-calculator/scripts/: deploy.sh  postgres-dev.yaml  prometheus-dev.yaml  stress_test.sh  temporal-values.yaml
temporal-calculator/sdk/: pyproject.toml
temporal-calculator/sdk/platform_sdk/: __init__.py  bootstrap.py  health.py  logging.py  metrics.py  shutdown.py
temporal-calculator/sdk/tests/: conftest.py  test_bootstrap.py  test_health.py  test_logging.py  test_metrics.py  test_shutdown.py
