[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "platform-sdk"
version = "0.1.0"
description = "Reusable Temporal worker bootstrap: connection, structured logging, health probes, graceful shutdown."
requires-python = ">=3.10"
dependencies = [
    "temporalio>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
include = ["platform_sdk*"]
